remove horizontal overflow bug from styles

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -12,7 +12,7 @@ body {
   position: absolute;
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -25,7 +25,6 @@ body {
   color: $text-color;
   text-align: left;
   width: 100%;
-  padding: 1rem;
   display: flex;
   align-items: start;
   justify-content: start;
@@ -35,6 +34,7 @@ body {
   font-size: 1.2em;
   flex-shrink: 0;
   top: 0;
+  box-sizing: border-box;
 
   * {
     display: inline;
@@ -57,9 +57,11 @@ body {
   align-items: left;
   padding: 0.5em;
   flex: 1 0 auto;
+  box-sizing: border-box;
 }
 
 .footer {
+  box-sizing: border-box;
   background: $bg-color !important;
   position: sticky;
   display: flex;
